hphp/hack/test/typecheck/references/refs_in_array/element_assign1b.php.exp
File "element_assign1b.php", line 5, characters 8-10:
Taking a value by reference is no longer supported in Hack. (Typing[4299])
